criação da notificação no dash do resposável.

--- a/frontend/src/pages/guardian/dashboard-guardian.html
+++ b/frontend/src/pages/guardian/dashboard-guardian.html
@@ -53,16 +53,15 @@
             <div class="summary-children">
                 <h5>Meus filhos</h5>
                 <div class="children" id="children">
-                    <div class="best-children-one" id="best-children-one">
+                    <!-- <div class="best-children-one" id="best-children-one">
                     </div>
                     <div class="best-children-two">""</div>
-                    <div class="best-children-three">""</div>
+                    <div class="best-children-three">""</div> -->
                 </div>
             </div>
-            <div class="summary-notification">
+            <div class="summary-notification ">
                 <h5>Notificações</h5>
                 <div class="notification">
-
                 </div>
             </div>
         </div>
