--- a/frontend/src/pages/teacher/gallery-teacher.html
+++ b/frontend/src/pages/teacher/gallery-teacher.html
@@ -8,10 +8,12 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/frontend/src/styles/dashboard-teacher.css">
-    <script type="module" src="../../../build/pages/teacher/dash.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>Dashboard</title>
+    <link rel="stylesheet" href="/frontend/src/styles/gallery-teacher.css">
+    <script type="module" src="../../../build/pages/teacher/gallery-teacher.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <title>Galeria</title>
 </head>
 
 <body>
@@ -38,7 +40,7 @@
                         <a class="nav-link" href="schedule-teacher.html">Agenda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="gallery-teacher.html">Galeria</a>
+                        <a class="nav-link disabled" aria-disabled="true">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
@@ -48,54 +50,33 @@
         </div>
     </nav>
     <main>
-        <div class="basic-info">
-            <div class="basic-info-classes">
-                <span class="material-symbols-outlined classes-icon">
-                    school
-                </span>
-                <div class="basic-info-classes-text">
-                    <h5>Turmas</h5>
-                    <p id="countClasses">0</p>
-                </div>
-            </div>
-            <div class="basic-info-students">
-                <span class="material-symbols-outlined students-icon">
-                    child_care
-                </span>
-                <div class="basic-info-students-text">
-                    <h5>Alunos</h5>
-                    <p id="countStudents">0</p>
-                </div>
-            </div>
-            <div class="basic-info-guardians">
-                <span class="material-symbols-outlined guardians-icon">
-                    family_restroom
-                </span>
-                <div class="basic-info-guardians-text">
-                    <h5>Responsáveis</h5>
-                    <p>0</p>
-                </div>
-            </div>
+        <div class="page-title">
+            <h4>Galeria</h4>
         </div>
-        <div class="summary">
-            <div class="summary-calendar">
-                <h5>Calendário</h5>
-            </div>
-            <div class="summary-best-classes">
-                <h5>Melhores Turmas</h5>
-            </div>
-        </div>
-        <div class="summary-last-info">
-            <div class="last-info-birthdays">
-                <h5>Aniversários</h5>
-            </div>
-            <div class="last-info-best-students">
-                <div class="best-student-one">""</div>
-                <div class="best-student-two">""</div>
-                <div class="best-student-three">""</div>
+        <div class="classes-gallery"></div>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <div class="modal-info">
+                    <div>
+                        <span class="close">&times;</span>
+                    </div>
+                    <p class="modal-title">Adicionar fotos</p>
+                </div>
+                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class">
+                <div class="reminder-content">
+                    <textarea type="text" placeholder="Insira a legenda" class="input-message"></textarea>
+                    <label for="fileInput" class="clip-wrapper">
+                        <span class="material-symbols-outlined" id="clip">
+                            attach_file
+                        </span>
+                        <input type="file" id="fileInput" class="hidden">
+                    </label>
+                </div>
+                <button class="add-photo-button">Adicionar</button>
             </div>
         </div>
     </main>
+
     <footer>Desenvolvido por Esther Lucena, Gabriel Morez, Guilherme Pires e Larissa Wandervegen.</footer>
 </body>
 
