Finalizado os ajustes na tela de agenda.
Finalizado os ajustes na tela de agenda.

--- a/frontend/src/pages/teacher/schedule-teacher.html
+++ b/frontend/src/pages/teacher/schedule-teacher.html
@@ -76,6 +76,21 @@
                 <button class="add-reminder-button">Adicionar</button>
             </div>
         </div>
+        <div id="viewModal" class="modal">
+            <div class="modal-content">
+                <div class="modal-info">
+                    <div>
+                        <span class="close-vw">&times;</span>
+                    </div>
+                    <p class="modal-title">Vizualizando lembrete</p>
+                </div>
+                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class" id="input-vw-class" disabled>
+                <input type="text" placeholder="Título" class="input-title" id="input-vw-title" disabled>
+                <div class="reminder-content">
+                    <textarea type="text" placeholder="Insira a mensagem" class="input-message" id="input-vw-message" disabled></textarea>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>Desenvolvido por Esther Lucena, Gabriel Morez, Guilherme Pires e Larissa Wandervegen.</footer>
