--- a/frontend/src/pages/teacher/schedule-teacher.html
+++ b/frontend/src/pages/teacher/schedule-teacher.html
@@ -45,10 +45,31 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
                     </li>
+                    <li class="nav-item">
+                        <div class="sub-menu-link">
+                            <a class="nav-link" id="user-pic-text"
+                                href="/frontend/src/pages/initial-login.html">Sair</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
+            <div id="user-pic" class="user-pic">
+                <img src="/frontend/assets/profile-userLogin-green.svg" width="38px" height="38px">
+                <img src="/frontend/assets/down-icon.svg" width="30px" height="30px">
+            </div>
+            <div class="sub-menu-wrap" id="sub-menu">
+                <div class="sub-menu">
+                    <a href="/frontend/src/pages/initial-login.html" class="sub-menu-link">
+                        <img src="/frontend/assets/logout-green.svg" width="30px" height="30px">
+                        <p>Sair</p>
+                        <span></span>
+                    </a>
+                </div>
+            </div>
+
         </div>
     </nav>
+
     <main>
         <div class="page-title">
             <h4>Agenda</h4>
