continuação do dash do professor, melhores turmas e aniversários funcionando.

--- a/frontend/src/pages/teacher/dashboard-teacher.html
+++ b/frontend/src/pages/teacher/dashboard-teacher.html
@@ -80,6 +80,7 @@
         <div class="summary-last-info">
             <div class="last-info-birthdays">
                 <h5>Aniversários</h5>
+                <div></div>
             </div>
             <div class="last-info-best-students">
                 <div class="best-student-one">""</div>
