--- a/frontend/src/pages/teacher/gallery-teacher.html
+++ b/frontend/src/pages/teacher/gallery-teacher.html
@@ -62,7 +62,7 @@
                     </div>
                     <p class="modal-title">Adicionar fotos</p>
                 </div>
-                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class">
+                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class" disabled>
                 <div class="reminder-content">
                     <textarea type="text" placeholder="Insira a legenda" class="input-message"></textarea>
                     <label for="fileInput" class="clip-wrapper">
