--- a/frontend/src/pages/teacher/dashboard-teacher.html
+++ b/frontend/src/pages/teacher/dashboard-teacher.html
@@ -83,9 +83,7 @@
                 <div></div>
             </div>
             <div class="last-info-best-students">
-                <div class="best-student-one">""</div>
-                <div class="best-student-two">""</div>
-                <div class="best-student-three">""</div>
+                <h5>Melhores alunos</h5>
             </div>
         </div>
     </main>
