Finalizado NavBar em todas as telas

--- a/frontend/src/pages/guardian/dashboard-guardian.html
+++ b/frontend/src/pages/guardian/dashboard-guardian.html
@@ -28,24 +28,43 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="dashboard-guardian.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Desempenho</a>
+                        <a class="nav-link" href="performance-guardian.html">Desempenho</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="schedule-guardian.html">Agenda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="gallery-guardian.html" aria-disabled="true">Galeria</a>
+                        <a class="nav-link" href="gallery-guardian.html">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
                     </li>
+                    <li class="nav-item">
+                        <div class="sub-menu-link">
+                            <a class="nav-link" id="user-pic-text"
+                                href="/frontend/src/pages/initial-login.html">Sair</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
+            <div id="user-pic" class="user-pic">
+                <img src="/frontend/assets/profile-userLogin-green.svg" width="38px" height="38px">
+                <img src="/frontend/assets/down-icon.svg" width="30px" height="30px">
+            </div>
+            <div class="sub-menu-wrap" id="sub-menu">
+                <div class="sub-menu">
+                    <a href="/frontend/src/pages/initial-login.html" class="sub-menu-link">
+                        <img src="/frontend/assets/logout-green.svg" width="30px" height="30px">
+                        <a class="nav-link" id="logout-button" href="/frontend/src/pages/initial-login.html">Sair</a>
+                        <span></span>
+                    </a>
+                </div>
+            </div>					
         </div>
     </nav>
     <main>
