--- a/frontend/src/pages/teacher/dashboard-teacher.html
+++ b/frontend/src/pages/teacher/dashboard-teacher.html
@@ -10,7 +10,9 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/dashboard-teacher.css">
     <script type="module" src="../../../build/pages/teacher/dash.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <title>Dashboard</title>
 </head>
 
@@ -24,7 +26,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="dashboard-teacher.html">Home</a>
                     </li>
@@ -43,7 +45,26 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
                     </li>
+                    <li class="nav-item">
+                        <div class="sub-menu-link">
+                            <a class="nav-link" id="user-pic-text"
+                                href="/frontend/src/pages/initial-login.html">Sair</a>
+                        </div>
+                    </li>
                 </ul>
+            </div>
+            <div id="user-pic" class="user-pic">
+                <img src="/frontend/assets/profile-userLogin-green.svg" width="38px" height="38px">
+                <img src="/frontend/assets/down-icon.svg" width="30px" height="30px">
+            </div>
+            <div class="sub-menu-wrap" id="sub-menu">
+                <div class="sub-menu">
+                    <a href="/frontend/src/pages/initial-login.html" class="sub-menu-link">
+                        <img src="/frontend/assets/logout-green.svg" width="30px" height="30px">
+                        <a class="nav-link" id="logout-button" href="/frontend/src/pages/initial-login.html">Sair</a>
+                        <span></span>
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
