--- a/frontend/src/pages/teacher/schedule-teacher.html
+++ b/frontend/src/pages/teacher/schedule-teacher.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/schedule-teacher.css">
     <script type="module" src="../../../build/pages/teacher/schedule.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -26,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="dashboard-teacher.html">Home</a>
                     </li>
@@ -40,7 +39,7 @@
                         <a class="nav-link" href="schedule-teacher.html">Agenda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Galeria</a>
+                        <a class="nav-link" href="gallery-teacher.html">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
@@ -61,7 +60,7 @@
                 <div class="sub-menu">
                     <a href="/frontend/src/pages/initial-login.html" class="sub-menu-link">
                         <img src="/frontend/assets/logout-green.svg" width="30px" height="30px">
-                        <p>Sair</p>
+                        <a class="nav-link" id="logout-button" href="/frontend/src/pages/initial-login.html">Sair</a>
                         <span></span>
                     </a>
                 </div>
@@ -69,7 +68,6 @@
 
         </div>
     </nav>
-
     <main>
         <div class="page-title">
             <h4>Agenda</h4>
@@ -83,7 +81,8 @@
                     </div>
                     <p class="modal-title">Adicionar lembrete</p>
                 </div>
-                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class" id="input-class" disabled>
+                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class" id="input-class"
+                    disabled>
                 <input type="text" placeholder="Título" class="input-title">
                 <div class="reminder-content">
                     <textarea type="text" placeholder="Insira a mensagem" class="input-message"></textarea>
@@ -105,10 +104,12 @@
                     </div>
                     <p class="modal-title">Vizualizando lembrete</p>
                 </div>
-                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class" id="input-vw-class" disabled>
+                <input type="text" placeholder="Selecionar turma ou aluno" class="input-class" id="input-vw-class"
+                    disabled>
                 <input type="text" placeholder="Título" class="input-title" id="input-vw-title" disabled>
                 <div class="reminder-content">
-                    <textarea type="text" placeholder="Insira a mensagem" class="input-message" id="input-vw-message" disabled></textarea>
+                    <textarea type="text" placeholder="Insira a mensagem" class="input-message" id="input-vw-message"
+                        disabled></textarea>
                 </div>
             </div>
         </div>
