--- a/frontend/src/pages/teacher/dashboard-teacher.html
+++ b/frontend/src/pages/teacher/dashboard-teacher.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/frontend/src/styles/dashboard-teacher.css">
+    <link rel="stylesheet" href="/frontend/src/styles/calendar.css" defer>
     <script type="module" src="../../../build/pages/teacher/dash.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Dashboard</title>
@@ -71,11 +72,80 @@
         </div>
         <div class="summary">
             <div class="summary-calendar">
-                <h5>Calendário</h5>
+                <table class="calendar">
+                    <thead class="days-week">
+                        <tr>
+                            <th>S</th>
+                            <th>M</th>
+                            <th>T</th>
+                            <th>W</th>
+                            <th>R</th>
+                            <th>F</th>
+                            <th>S</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><a class="scnd-font-color">1</a></td>
+                        </tr>
+                        <tr>
+                            <td><a class="scnd-font-color">2</a></td>
+                            <td><a class="scnd-font-color">3</a></td>
+                            <td><a class="scnd-font-color">4</a></td>
+                            <td><a class="scnd-font-color">5</a></td>
+                            <td><a class="scnd-font-color">6</a></td>
+                            <td><a class="scnd-font-color">7</a></td>
+                            <td><a class="scnd-font-color">8</a></td>
+                        </tr>
+                        <tr>
+                            <td><a class="scnd-font-color">9</a></td>
+                            <td><a class="scnd-font-color">10</a></td>
+                            <td><a class="scnd-font-color">11</a></td>
+                            <td><a class="scnd-font-color">12</a></td>
+                            <td><a class="scnd-font-color">13</a></td>
+                            <td><a class="scnd-font-color">14</a></td>
+                            <td><a class="scnd-font-color">15</a></td>
+                        </tr>
+                        <tr>
+                            <td><a class="scnd-font-color">16</a></td>
+                            <td><a class="scnd-font-color">17</a></td>
+                            <td><a class="scnd-font-color">18</a></td>
+                            <td><a class="scnd-font-color">19</a></td>
+                            <td><a class="scnd-font-color">20</a></td>
+                            <td><a class="scnd-font-color">21</a></td>
+                            <td><a class="scnd-font-color">22</a></td>
+                        </tr>
+                        <tr>
+                            <td><a class="scnd-font-color">23</a></td>
+                            <td><a class="scnd-font-color">24</a></td>
+                            <td><a class="scnd-font-color">25</a></td>
+                            <td><a class="today">26</a></td>
+                            <td><a>27</a></td>
+                            <td><a>28</a></td>
+                            <td><a>29</a></td>
+                        </tr>
+                        <tr>
+                            <td><a>30</a></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             <div class="summary-best-classes">
                 <h5>Melhores Turmas</h5>
             </div>
+        </div>
         </div>
         <div class="summary-last-info">
             <div class="last-info-birthdays">
