--- a/frontend/src/pages/guardian/schedule-guardian.html
+++ b/frontend/src/pages/guardian/schedule-guardian.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="imagex/png" href="/frontend/assets/logo-icon-pink.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet"
@@ -13,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>Agenda</title>
 </head>
 
@@ -28,16 +30,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="dashboard-guardian.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="dashboard-guardian.html" id="active-home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Desempenho</a>
+                        <a class="nav-link active" href="schedule-guardian.html" id="active-schedule">Agenda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="schedule-guardian.html">Agenda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery-guardian.html">Galeria</a>
+                        <a class="nav-link active" href="gallery-guardian.html" id="active-gallery">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
@@ -62,7 +61,7 @@
                         <span></span>
                     </a>
                 </div>
-            </div>
+            </div>					
         </div>
     </nav>
     <main>
