--- a/frontend/src/pages/student/dashboard-student.html
+++ b/frontend/src/pages/student/dashboard-student.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="imagex/png" href="/frontend/assets/logo-icon-pink.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet"
@@ -30,36 +31,40 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="dashboard-guardian.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="/frontend/src/pages/guardian/dashboard-guardian.html" id="active-home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Desempenho</a>
+                        <a class="nav-link" href="/frontend/src/pages/guardian/schedule-guardian.html" id="active-schedule">Agenda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="schedule-guardian.html">Agenda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery-guardian.html" aria-disabled="true">Galeria</a>
+                        <a class="nav-link" href="/frontend/src/pages/guardian/gallery-guardian.html" id="active-gallery">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
                     </li>
-                    <li class="nav-item" id="dropdown-logout"> <!--esther-->
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="material-symbols-outlined">person</span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Sair</a></li>
-                            </ul>
+                    <li class="nav-item">
+                        <div class="sub-menu-link">
+                            <a class="nav-link" id="user-pic-text"
+                                href="/frontend/src/pages/initial-login.html">Sair</a>
                         </div>
                     </li>
                 </ul>
             </div>
+            <div id="user-pic" class="user-pic">
+                <img src="/frontend/assets/profile-userLogin-green.svg" width="38px" height="38px">
+                <img src="/frontend/assets/down-icon.svg" width="30px" height="30px">
+            </div>
+            <div class="sub-menu-wrap" id="sub-menu">
+                <div class="sub-menu">
+                    <a href="/frontend/src/pages/initial-login.html" class="sub-menu-link">
+                        <img src="/frontend/assets/logout-green.svg" width="30px" height="30px">
+                        <a class="nav-link" id="logout-button" href="/frontend/src/pages/initial-login.html">Sair</a>
+                        <span></span>
+                    </a>
+                </div>
+            </div>					
         </div>
     </nav>
-
     <main>
         <div class="student-dash">
             <div id="student-info"></div>
