--- a/frontend/src/pages/teacher/login-page-teacher.html
+++ b/frontend/src/pages/teacher/login-page-teacher.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="imagex/png" href="/frontend/assets/logo-icon-pink.svg">
     <link rel="icon" href="/frontend/assets/logo-icon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -13,12 +14,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.3.5/dist/axios.min.js"></script>
     <script type="module" src="../../../build/pages/teacher/login.js" defer></script>
-    <!-- <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const loginBtn = document.getElementById('loginBtn');
-            loginBtn.addEventListener('click', () => login());
-        });
-    </script> -->
     <title>Login</title>
 </head>
 
