--- a/frontend/src/pages/teacher/performance-teacher.html
+++ b/frontend/src/pages/teacher/performance-teacher.html
@@ -4,17 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="imagex/png" href="/frontend/assets/logo-icon-pink.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/frontend/src/styles/performance-teacher.css">
     <script type="module" src="../../../build/pages/teacher/performance.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>Desempenho</title>
-</head> 
+</head>
+
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
         <div class="container-fluid">
@@ -27,19 +31,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="dashboard-teacher.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="dashboard-teacher.html"
+                            id="active-home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="classes-teacher.html">Turmas</a>
+                        <a class="nav-link active" href="classes-teacher.html" id="active-class">Turmas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="performance-teacher.html">Desempenho</a>
+                        <a class="nav-link active" href="performance-teacher.html"
+                            id="active-performance">Desempenho</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="schedule-teacher.html">Agenda</a>
+                        <a class="nav-link active" href="schedule-teacher.html" id="active-schedule">Agenda</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery-teacher.html">Galeria</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="gallery-teacher.html" id="active-gallery">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Chat</a>
@@ -68,7 +74,7 @@
         </div>
     </nav>
 
-    
+
     <main>
         <div class="page-title">
             <h4>Avaliar</h4>
